--- a/tex/metodos.tex
+++ b/tex/metodos.tex
@@ -63,7 +63,7 @@ Por fim, foram traçados os contornos das mangas, visando a remoção de partes 
 
 \begin{figure}[!htb]
 \centering
-    \caption{\label{fig:prep_tommy} Antes e depois do pré-processamento (a) Imagem original (b) Imagem resultante após utilização de técnicas de pré-processamento.}
+    \caption{\label{fig:prep} Antes e depois do pré-processamento (a) Imagem original (b) Imagem resultante após utilização de técnicas de pré-processamento.}
     \subcaptionbox{(a)}{\includegraphics[scale=0.035]{img/sem_processamento.JPG}}
     \subcaptionbox{(b)}{\includegraphics[scale=0.062]{img/processada.JPG}}
     \legend{\textbf{Fonte: } (Autor, 2019).}
