--- a/tex/refs.tex
+++ b/tex/refs.tex
@@ -69,6 +69,9 @@
 \noindent GIL, A. C. Como elaborar projetos de pesquisa. 4. ed. São Paulo: Atlas, 2007.
 \\
 
+\noindent GLOBAL IMAGE THRESHOLDING USING OTSU'S METHOD. MathWorks Inc. Disponível em: <https://www.mathworks.com/help/images/ref/graythresh.html>. Acesso em: 17 feb. 2019.
+\\
+
 \noindent GONZALEZ, R. C.; WOODS, R. C. \textit{Processamento digital de imagens}. Pearson Educación, 2009.
 \\
 
