results almost finished

--- a/tex/desenvolvimento.tex
+++ b/tex/desenvolvimento.tex
@@ -193,14 +193,16 @@ Em que:
 	\mu_1(t) = \sum_{i=1}^t{i\frac{P(i)}{q_i(t)}} \;\;\;\; \mu_2(t) = \sum_{i=t+1}^I{i\frac{P(i)}{q_2(t)}}
 \end{equation}
 
-Na Figura \ref{fig:otsu} é mostrada uma imagem original e o resultado da segmentação de Otsu.
+Na Figura \ref{img:otsu} é mostrada uma imagem original e o resultado da segmentação de Otsu.
 
 \begin{figure}[H]
 \centering
-    \caption{\label{fig:otsu} Segmentação de Otsu. À esquerda, a imagem original. À direita, a imagem segmentada pelo algoritmo de Otsu}
+    \caption{\label{img:otsu} Segmentação de Otsu. À esquerda, a imagem original. À direita, a imagem segmentada pelo algoritmo.}
     \includegraphics[scale=0.5]{img/otsu.png}
     \legend{\textbf{Fonte: } (Mathworks Inc., 2006).}
 \end{figure}
+
+% \imagem{0.5}{otsu}{Segmentação de Otsu. À esquerda, a imagem original. À direita, a imagem segmentada pelo algoritmo de Otsu.}{(MathWorks Inc., 2006).}
 
 \subsection{Técnicas de inferência}
 
