--- a/tex/commands.tex
+++ b/tex/commands.tex
@@ -4,6 +4,11 @@
 % footnote spacing
 \addtolength{\skip\footins}{1cm}
 
+\usepackage{array}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+
 % -----------------------------------------------------------------------------
 % Pacotes fundamentais
 % -----------------------------------------------------------------------------
