--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -17,7 +17,7 @@ O trabalho proposto possui potencial para beneficiar a comercialização da mang
 
 Para a obtenção de uma informação desejada a partir de uma imagem, é necessário cumprir uma sequência de etapas que se inicia na aquisição das imagens das amostras. Segundo Esquef (2002), após a aquisição é realizado o pré-processamento das imagens. Esta etapa é fundamental em um sistema de visão computacional, sendo necessária para remover informações indesejadas, realçar ou atenuar algumas das partes da imagem. Após ser realizado o pré-processamento, é aplicada a segmentação, para que a imagem seja dividida em partes disjuntas, visando sua simplificação (JOSEPH; SINGH, 2014). No contexto deste trabalho, a única região de interesse é a manga; assim, as imagens foram segmentadas visando a separação entre a fruta e o plano de fundo. A penúltima etapa realizada foi a extração de atributos, em que para cada imagem é obtido um conjunto de características que a define. Por fim, estes atributos de cada imagem foram relacionados ao atributo desejado através de um modelo preditivo.
 
-Entretanto, a escolha de técnicas de pré-processamento de imagens e atributos empregados não é realizada de forma trivial e depende da natureza do problema. Logo, para a construção de um bom modelo preditivo de sólidos solúveis totais (SST), diferentes técnicas de pré-processamento foram testadas e, para a determinação dos atributos mais significativos, um estudo investigativo sobre elas foi conduzido. Por fim, a relação entre os atributos e o SST deverá fiu modelada através de uma Regressão linear e Random Forest, cujos desempenhos foram avaliados através de métricas apropriadas. Assim, através deste estudo se buscou um profundo entendimento entre os aspectos visuais da manga e sua doçura. 
+Entretanto, a escolha de técnicas de pré-processamento de imagens e atributos empregados não é realizada de forma trivial e depende da natureza do problema. Logo, para a construção de um bom modelo preditivo de sólidos solúveis totais (SST), diferentes técnicas de pré-processamento foram testadas e, para a determinação dos atributos mais significativos, um estudo investigativo sobre elas foi conduzido. Por fim, a relação entre os atributos e o SST deverá ser modelada através de uma Regressão linear e Random Forest, cujos desempenhos foram avaliados através de métricas apropriadas. Assim, através deste estudo se buscou um profundo entendimento entre os aspectos visuais da manga e sua doçura. 
 
 \section{Objetivos}
 
